--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Zilla+Slab:400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
 * {
-    font-family: 'Zilla Slab', serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400 !important;
 }
 
@@ -14,22 +15,19 @@ body {
     padding-bottom: 0 !important;
 }
 
-.avatar {
-    height: 256px;
-    width: 256px;
-}
-
 .panel-1 {
     background-color: #fff !important;
 }
 
 .introduction {
     margin-top: 40px;
+    font-family: 'Zilla Slab', serif;
     font-weight: 700 !important;
     letter-spacing: 2px;
 }
 
 .sub-introduction {
+    font-family: 'Zilla Slab', serif;
     margin-top: 30px;
     line-height: 160%;
 }
@@ -52,6 +50,10 @@ body {
     font-weight: 700 !important;
 }
 
+.sub-caption {
+    margin-left: 20px;
+}
+
 .company-title {
     margin-left: 20px;
 }
@@ -59,33 +61,32 @@ body {
 
 /* MILESTONE */
 
-#work {
-    margin-top: 20px;
+.work {
+    margin-top:20px;
     position: relative;
     padding: 1em 0;
     list-style: none;
 }
 
-#work:before {
+.work:before {
     width: 5px;
     height: 100%;
     position: absolute;
-    left: 25px;
+    left: 50px;
     top: 0;
     content: ' ';
-    display: block;
-    /*background: linear-gradient(to bottom, #ffffff 0%,#ec7263 7%,#ec7263 89%,#ffffff 100%);*/
+    display: block !important;
     background:  linear-gradient(to bottom, #ffffff 0%,#ccc 7%,#ccc 89%,#ffffff 100%);
 }
 
-#work li {
+.work li {
     width: 100%;
     z-index: 2;
     position: relative;
     float: left;
 }
 
-#work .year {
+.work .year {
     width: 10%;
     background: #fff;
     padding: 10px;
@@ -93,61 +94,50 @@ body {
     font-weight: 700 !important;
     display: inline-block;
     text-align: center;
+    margin-left: 20px;
 }
 
 @media (min-width: 1200px) {
-    #work .description {
+    .work .description {
         width: 90%;
     }
 }
 
 @media (min-width: 992px) {
-    #work .description {
+    .work .description {
         width: 87%;
     }
 }
 
 @media (min-width: 768px) {
-    #work .description {
+    .work .description {
         width: 85%;
     }
 }
 
 @media (min-width: 500px) {
-    #work .description {
+    .work .description {
         width: 85%;
     }
 }
 
-#work .description {
+.work .description {
     width: 80%;
     display: inline-block;
     background-color: #dae3e7 !important;
     margin-bottom: 10px;
     position: relative;
-    padding: 10px 10px 0 10px;
+    padding: 10px;
     border-bottom: 1px solid #ddd;
 }
 
-#work .description h3 {
-    font-size: 1em;
-    margin: 0;
-    padding: 0;
-    font-weight: 700;
-}
-
-#work .description p {
+.work .description p {
     font-size: 1em;
     margin-top: 5px;
     padding: 0;
 }
 
-.box p {
-    font-size: 1.3em;
-    line-height: 1.5em;
-}
-
-#work .description:after {
+.work .description:after {
     content: '';
     position: absolute;
     top: 15px;
@@ -161,13 +151,14 @@ body {
     pointer-events: none;
 }
 
-.externalLink:link,
-.externalLink:visited,
-.externalLink:active {
-  color: #E24324;
-  text-decoration: none;
+.external-link:link,
+.external-link:visited,
+.external-link:active {
+    margin-left: 20px;
+    color: #E24324;
+    text-decoration: none;
 }
 
-.externalLink:hover {
-  color: #aa13ce;
+.external-link:hover {
+    color: #aa13ce;
 }
