--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ body {
 
 
 .introduction {
-    margin-top: 20px;
+    margin-top: 5%;
     font-family: 'Zilla Slab', serif;
     font-weight: 700 !important;
     letter-spacing: 2px;
