--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,6 @@ body {
     background-color: #dae3e7 !important;
 }
 
-
 .jumbotron {
     margin-bottom: 0px;
     color: white !important;
@@ -30,7 +29,7 @@ body {
 
 .bg:after {
     content: "";
-    background-image: url("diagmonds.png");
+    background-image: url("../img/diagmonds.png");
     opacity: 1;
     top: 0;
     left: 0;
@@ -39,7 +38,6 @@ body {
     position: absolute;
     z-index: -1;
 }
-
 
 .introduction {
     margin-top: 5%;
