--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,7 +29,7 @@ body {
 
 .bg:after {
     content: "";
-    background-image: url('img/diagmonds.png');
+    background-image: url('../img/diagmonds.png');
     opacity: 1;
     top: 0;
     left: 0;
