--- a/src/css/main.css
+++ b/src/css/main.css
@@ -141,6 +141,7 @@ body {
     font-size: 1em;
     font-weight: 600 !important;
     display: inline-block;
+    text-align: center;
 }
 
 @media (min-width: 1200px) {
