--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@
 * {
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    text-shadow: rgba(0,0,0,.01) 0 0 1px;
+    text-shadow: rgba(0,0,0,0.2) 0 0 1px;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
 }
 
 .btn-outline:hover {
-    background-color: #d43f3a !important;
+    background-color: #000 !important;
 }
 
 .btn {
@@ -46,7 +46,7 @@ body {
 
 .bg:after {
     content: "";
-    background-image: url('../img/digi-art.jpg');
+    background-image: url('../img/deepvoid.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
@@ -64,6 +64,7 @@ body {
     margin-bottom: 5%;
     height: 180px;
     width: 180px;
+    border: 5px solid #343838;
 }
 
 .introduction {
