--- a/src/css/main.css
+++ b/src/css/main.css
@@ -48,7 +48,7 @@ body {
     content: "";
     background-image: url('../img/deepvoid.jpg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-position: center; 
     opacity: 0.9;
     top: 0;
