--- a/src/css/main.css
+++ b/src/css/main.css
@@ -64,7 +64,7 @@ body {
     margin-bottom: 5%;
     height: 180px;
     width: 180px;
-    border: 5px solid #343838;
+    border: 7px solid #fff;
 }
 
 .introduction {
