--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,6 +65,7 @@ body {
     margin-bottom: 20px;
     border-bottom: 1px solid #e5e5e5;
     color: #fff;
+    margin: 0 !important;
 }
 
 .avatar {
