Fix the off-canvas design by giving it a width of 100%

--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -20,3 +20,11 @@
 #about > div > div > div > blockquote {
     padding-top: 15% !important;
 }
+
+.uk-offcanvas-bar {
+    width: 100% !important;
+}
+
+#menu-list li {
+    padding: 10px 0;
+}
