--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,800');
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 * {
     font-family: 'Montserrat', sans-serif !important;
@@ -28,3 +29,8 @@
 #menu-list li {
     padding: 10px 0;
 }
+
+.text-cursive {
+    font-family: 'Pacifico', cursive !important;
+}
+
